tests/baselines/reference/callSignaturesShouldBeResolvedBeforeSpecialization.errors.txt
callSignaturesShouldBeResolvedBeforeSpecialization.ts(7,5): error TS1184: Modifiers cannot appear here.
callSignaturesShouldBeResolvedBeforeSpecialization.ts(9,10): error TS2345: Argument of type 'boolean' is not assignable to parameter of type 'string'.


==== callSignaturesShouldBeResolvedBeforeSpecialization.ts (2 errors) ====
    interface I1<T> {
        (value: T): void;
        field1: I1<boolean>;
    }
    
    function foo() {
        declare var test: I1<string>;
        ~~~~~~~
!!! error TS1184: Modifiers cannot appear here.
        test("expects boolean instead of string"); // should not error - "test" should not expect a boolean
        test(true); // should error - string expected
             ~~~~
!!! error TS2345: Argument of type 'boolean' is not assignable to parameter of type 'string'.
    }